<resources>
    <string name="app_name" translatable="false">☣ XYZ Demonstration ☣</string>
    <string name="title_dynamicfeatureondemand" translatable="false">☣ XYZ Demo ☣</string>
    <string name="installDynamicFeature" translatable="false">Install Dynamic Feature</string>

    <string name="testInAppUpdate" translatable="false">Test | In-App Update</string>
    <string name="testFacebook" translatable="false">Test | Facebook</string>
    <string name="testBrainTree" translatable="false">PayPal | BrainTree</string>
    <string name="testFluidUI" translatable="false">Test | FluidUI</string>
    <string name="testMaterialUI" translatable="false">Test | MaterialUI</string>
    <string name="testHttpsConnection" translatable="false">Test | HttpsConnection</string>
    <string name="backgroundProcess" translatable="false">Test | Background Process</string>
    <string name="testHomeLauncher" translatable="false">Test | Home Launcher</string>
    <string name="coverMagazine" translatable="false">Test | Magazine Cover</string>
    <string name="dynamicLink" translatable="false">Test | Dynamic Link</string>
    <string name="motionScene" translatable="false">Test | Motion Scene</string>
    <string name="drawingCanvas" translatable="false">Test | Paint</string>


    <string name="webClientId" translatable="false">38462126146-t1kia1498ml5c4tenl9vu9pvlts81vr2.apps.googleusercontent.com</string>
    <string name="inAppUpdateDescription" translatable="false">An Update Has Just Been Installed</string>
    <string name="inAppUpdateAction" translatable="false">
        <![CDATA[
            Complete It!
        ]]>
    </string>
    <string name="facebook_app_id" translatable="false">2261294380634519</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2261294380634519</string>

    <string name="ADMOB_APP_ID" translatable="false">ca-app-pub-2920235108594210~3184491065</string>
    <string name="AD_UNIT_BANNER_ONE" translatable="false">ca-app-pub-2920235108594210/5946331878</string>
    <string name="AD_UNIT_BANNER_TWO" translatable="false">ca-app-pub-2920235108594210/9063449805</string>
    <string name="AD_UNIT_BANNER_THREE" translatable="false">ca-app-pub-2920235108594210/5124204796</string>
    <string name="AdUnitInterstitialOne" translatable="false">ca-app-pub-2920235108594210/2134422833</string>

    <!--  pin poses -->
    <string name="pin_path_1" translatable="false">M412.7,238.9C381,238.9 356.8,261.8 356.8,294.6C356.8,329.7 407.7,408.7 409.2,408.8C410.7,408.9 469.4,328.1 469.4,294.6C469.4,261.8 444.5,238.9 412.7,238.9ZM412.7,324.3C397.2,324.3 384.7,311.3 384.7,295.3C384.7,279.3 397.2,266.3 412.7,266.3C428.2,266.3 440.8,279.3 440.8,295.3C440.8,311.3 428.2,324.3 412.7,324.3Z</string>
    <string name="pin_path_5" translatable="false">M406.7,247.6C374.9,247.6 350.4,270.5 350.4,303.4C350.4,335.9 406.9,400.5 406.1,408.7C416,408.7 463.4,339.3 463.4,303.4C463.4,270.5 438.4,247.6 406.7,247.6ZM406.7,329.7C391.2,329.7 378.6,317.5 378.6,302.4C378.6,287.2 391.2,275 406.7,275C422.2,275 434.8,287.2 434.8,302.4C434.8,317.5 422.2,329.7 406.7,329.7Z</string>
    <string name="pin_path_9" translatable="false">M414.2,238.1C382.4,238.1 357.9,261 357.9,293.8C357.9,326.3 402.5,408.3 403.9,408.3C405.3,408.3 471.4,330.5 471.4,293.8C471.4,261 445.9,238.1 414.2,238.1ZM414.2,323.8C398.7,323.8 386.1,310.7 386.1,294.6C386.1,278.5 398.7,265.4 414.2,265.4C429.7,265.4 442.3,278.5 442.3,294.6C442.3,310.7 429.7,323.8 414.2,323.8Z</string>
    <string name="pin_path_13" translatable="false">M411.5,270.7C375.4,270.7 354.7,289.4 354.7,322.3C354.7,341 392.2,409.6 402.3,409.6C415.5,409.6 468.3,350.4 468.3,322.3C468.3,289.4 439.4,270.7 411.5,270.7ZM411.5,345.4C396,345.4 382.2,333.7 382.2,320C382.2,306.4 393.6,294 411.5,295.9C428.7,297.7 440.3,308 440.3,321.7C440.3,335.3 429.6,345.4 411.5,345.4Z</string>
    <string name="pin_path_19" translatable="false">M452.8,211C418,208.7 398,240.4 398,253.2C398,298.3 401.3,343.7 384.1,360.4C465,355.9 508.3,297.4 508.3,269.2C508.3,230.3 477.4,212.7 452.8,211ZM452.5,297C431.6,297 423.8,275.7 423.8,262C423.8,248.4 439.3,236.3 452.8,236.3C466.2,236.3 481.6,248.4 481.6,262C481.6,275.7 473.4,297 452.5,297Z</string>

    <!-- colors -->
    <color name="pin">#F83E3E</color>
    <color name="dot">#E2E2E2</color>

    <string name="path_funky_six" translatable="false">M302.14,60.72C302.29,61.46 276.46,97.06 270.1,112.55C260.87,138.44 278.6,149.83 284.3,152.76C299.15,160.38 316.85,150.27 323.08,141.43C329.3,132.59 333.05,109.99 316.85,100.57C306.85,94.75 290.54,97.32 290.2,97.06C289.85,96.79 276.32,81.31 276.46,80.88C276.6,80.45 294.73,77.62 302.88,84.28C315.76,92.99 315.62,114.99 306.84,127.42C298.06,139.85 276.46,144.38 260.54,130.73C238.46,111.79 259.06,85.64 260.87,83.1C260.87,83.1 286.23,46.19 286.83,46.03C287.43,45.87 301.99,59.99 302.14,60.72Z</string>
    <string name="path_one_googleio" translatable="false">M211,45L235,45A2,2 0,0 1,237 47L237,155A2,2 0,0 1,235 157L211,157A2,2 0,0 1,209 155L209,47A2,2 0,0 1,211 45z</string>

    <item name="hashtag_stroke_width" format="float" type="dimen">7</item>

    <color name="indigo_400">#5C6BC0</color>
    <color name="cyan_a100">#84FFFF</color>
    <color name="pink_500">#E91E63</color>
    <color name="cyan_300">#4DD0E1</color>

    <string-array name="assistantActionLabel">
        <item name="labelOne">Do Something Geeky!</item>
        <item name="labelTwo">Geeks Up!</item>
    </string-array>
    <string name="title_activity_java_main">JavaMainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
