<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:apps="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/testView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="3dp"
        android:paddingVertical="51dp"
        android:background="@drawable/multicolor_gradient">

        <ImageView
            android:id="@+id/googlePay"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="13dp"
            android:padding="8dp"
            android:textAllCaps="false"
            android:text="@string/buy_with_googlepay_button_content_description"
            android:src="@drawable/ic_google_pay_mark_800_gray"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/brainTreePayPal"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_below="@id/googlePay"
            android:layout_margin="7dp"
            android:textAllCaps="false"
            android:visibility="gone"
            android:text="@string/testBrainTree" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/inAppUpdate"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_below="@id/brainTreePayPal"
            android:layout_margin="7dp"
            android:textAllCaps="false"
            android:text="@string/testInAppUpdate"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebookAPI"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_below="@id/inAppUpdate"
            android:layout_margin="7dp"
            android:textAllCaps="false"
            android:text="@string/testFacebook"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fluidUITest"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_below="@id/facebookAPI"
            android:layout_margin="7dp"
            android:textAllCaps="false"
            android:text="@string/testFluidUI"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialUITest"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_below="@id/fluidUITest"
            android:layout_margin="7dp"
            android:textAllCaps="false"
            android:text="@string/testMaterialUI"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/httpsConnection"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_below="@id/materialUITest"
            android:layout_margin="7dp"
            android:textAllCaps="false"
            android:text="@string/testHttpsConnection"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backgroundProcess"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_below="@id/httpsConnection"
            android:layout_margin="7dp"
            android:textAllCaps="false"
            android:text="@string/backgroundProcess"
            android:visibility="gone"

            apps:iconSize="23dp"
            apps:iconTint="@android:color/transparent"
            apps:iconTintMode="add"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/homeLauncher"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_below="@id/backgroundProcess"
            android:layout_margin="7dp"
            android:textAllCaps="false"
            android:text="@string/testHomeLauncher" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/coverMagazine"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_below="@id/homeLauncher"
            android:layout_margin="7dp"
            android:textAllCaps="false"
            android:text="@string/coverMagazine" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createDynamicLink"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_below="@id/coverMagazine"
            android:layout_margin="7dp"
            android:textAllCaps="false"
            android:text="@string/dynamicLink" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/motionScene"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_below="@id/createDynamicLink"
            android:layout_margin="7dp"
            android:textAllCaps="false"
            android:text="@string/motionScene"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/drawingCanvas"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_below="@id/motionScene"
            android:layout_margin="7dp"
            android:textAllCaps="false"
            android:text="@string/drawingCanvas" />

        <ProgressBar
            android:id="@+id/webViewProgressBar"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateDuration="11000"
            android:indeterminateDrawable="@drawable/progress_bar_drawable"
            android:elevation="2dp"
            android:visibility="invisible"

            style="?android:attr/progressBarStyleHorizontal" />

    </RelativeLayout>

</ScrollView>
